@@ -1,5 +1,8 @@
 2011-09-18  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: enhancement: MPEG TS: Added support for HDMV PGS
+	subtitles.
+
 	* mkvmerge: enhancement: MPEG TS: Added support for DTS HD Master
 	Audio tracks.
 
